[gd_scene load_steps=8 format=3 uid="uid://dyyjsxg1bijpa"]

[ext_resource type="PackedScene" uid="uid://bjjceeyq3csc3" path="res://Assets/sky/sky.tscn" id="1_il8bf"]
[ext_resource type="PackedScene" uid="uid://bbdfih0weqhie" path="res://airport.tscn" id="1_ubhcf"]
[ext_resource type="Script" path="res://AircraftManager.gd" id="2_8bqv8"]
[ext_resource type="PackedScene" uid="uid://dooe7wxlpdhd5" path="res://Aircraft.tscn" id="3_q2orl"]
[ext_resource type="PackedScene" uid="uid://ctt41btfk0n4u" path="res://UI.tscn" id="4_xor5g"]
[ext_resource type="Script" path="res://aircraftSpawnTimer.gd" id="5_3soxv"]
[ext_resource type="PackedScene" uid="uid://cacaqggyoumx3" path="res://FirstPersonCharacter3D.tscn" id="5_4se8p"]

[node name="main" type="Node3D"]

[node name="Sky" parent="." instance=ExtResource("1_il8bf")]
day_time = 16.983
day_of_year = 148

[node name="airport" parent="." instance=ExtResource("1_ubhcf")]

[node name="AircraftManager" type="Node3D" parent="."]
transform = Transform3D(1, 0, 1.06581e-14, 0, 1, 0, -1.06581e-14, 0, 1, 1321.99, 0, 0)
script = ExtResource("2_8bqv8")
aircraftScene = ExtResource("3_q2orl")
spawn_distance = 8.0

[node name="spawnTimer" type="Timer" parent="AircraftManager" node_paths=PackedStringArray("aircraftManager")]
wait_time = 80.0
autostart = true
script = ExtResource("5_3soxv")
aircraftManager = NodePath("..")

[node name="Aircraft" parent="AircraftManager" node_paths=PackedStringArray("comm_manager", "controller", "behaviour_FSM", "body_detection", "taxi_to_stand_stand_input") instance=ExtResource("3_q2orl")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -541.525, 0.500122, 467.71)
comm_manager = NodePath("communication manager")
controller = NodePath("A320neo")
behaviour_FSM = NodePath("Behaviour FSM")
body_detection = NodePath("A320neo/body detection")
taxi_to_stand_stand_input = NodePath("communication manager/VBoxContainer/taxi to stand/HBoxContainer/stand")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 808.321, 691.623, 300)
near = 0.1
far = 5000.0

[node name="UI" parent="." instance=ExtResource("4_xor5g")]

[node name="CharacterBody3D" parent="." instance=ExtResource("5_4se8p")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 760.277, 46.8603, 530.563)

[connection signal="child_entered_tree" from="AircraftManager" to="AircraftManager" method="_on_child_entered_tree"]
[connection signal="child_exiting_tree" from="AircraftManager" to="AircraftManager" method="_on_child_exiting_tree"]
